# paperX

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  paperx.toml
.github/workflows/: ci.yml
bib/: references.bib
src/: main.rs
tex/: main.tex
