[package]
name = "paperx"
version = "0.1.0"
edition = "2021"
description = "A modern Rust CLI tool for LaTeX paper management: scaffold, build, watch, and organize academic papers with ease."
authors = ["paperx contributors"]
license = "MIT"
repository = "https://github.com/naoki-takata/paperx"
homepage = "https://github.com/naoki-takata/paperx"
keywords = ["latex", "academic", "papers", "research", "cli", "tectonic", "tex"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
readme = "README.md"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "5"
notify = "6"
open = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
which = "6"
walkdir = "2"


[profile.release]
lto = true
codegen-units = 1